# e4e-data-management-rust

./: .gitignore  Cargo.toml  build.rs  readme.md
.github/workflows/: rust.yml
docs/: Class_Diagram.puml  class-list.md
src/: cli.rs  commands.rs  config.rs  dataset.rs  main.rs  manifest.rs
src/commands/: add.rs  commit.rs  init_dataset.rs  init_mission.rs
