[package]
name = "e4e-data-management-rust"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of the E4E data management tool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.7", features = ["derive"] }
serde = { version = "1.0.190", features = ["derive"] }
