[package]
name = "e4e-data-management-rust"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of the E4E data management tool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
directories = "5.0.1"
chrono = { version = "0.4.33", features = ["serde"] }
clap = { version = "4.4.7", features = ["derive"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.113"
toml = "0.8.8"
